<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Check It</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_update">Update</string>
    
    <!-- MESSAGES -->
    <string name="msg_network_error">Network error. No connectivity.</string>
    <string name="msg_no_local_files">No local files. Please connect to internet and try again.</string>
    <string name="msg_checklist_upload_success">Checklist uploaded successfully!</string>
    <string name="msg_updating_files">Updating files. Please wait.</string>
    <string name="msg_updating_notifications">Updating notifications. Please wait.</string>
    <string name="msg_uploading_checklist">Uploading checklist. Please wait.</string>
    <string name="msg_uploading_unsent">Uploading unsent checklist.</string>
    <string name="msg_no_steps">No steps in checklist.</string>
    <string name="msg_starting_camera">Starting Camera</string>
    <string name="msg_unsent_notification">Will send next time connection to internet is available and notification page updates.</string>
    <string name="msg_already_logged">Already logged</string>
    <string name="msg_unsent_notification_sent">Unsent notifications successfully sent!</string>

    <!-- TEXTVIEWS -->
    <string name="start_new_checklist">Start New Checklist</string>
    <string name="continue_checklist">Continue Checklist</string>
    <string name="notifications">Notifications</string>
    <string name="id_label">ID:</string>
    <string name="num_of_steps_label">Number of Steps:</string>
    <string name="step_order_label">Step</string>
    <string name="out_of_label">out of</string>
    <string name="result_label">Result</string>
    <string name="notes_label">Notes:</string>
    <string name="result_image_label">Result Image</string>
    <string name="extra_image_label">Extra Image</string>
    <string name="click_step_to_edit">*** click on step to edit ***</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_picture">Add Picture</string>
    <string name="notified_label">Notified:</string>
    <string name="notify_label">Notify:</string>
    <string name="checklist_label">Checklist:</string>
    <string name="step_label">Step:</string>
    <string name="extras_label">Extras</string>

    <!-- EDITTEXT HINTS -->
    <string name="double_hint">Enter Number Here</string>
    <string name="text_hint">Type Message Here</string>

    <!-- BUTTONS -->
    <string name="button_submit">Submit</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="finish_checklist">Finish Checklist</string>

    <!-- DIALOGS -->
    <string name="dialog_quit">Are you sure you want to quit? Your progress will not be saved.</string>
    <string name="dialog_not_complete">Some steps are not complete.</string>
    <string name="dialog_finish">Finish checklist?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_network_error">Network error. Checklist will be resent next time app is opened with internet connection.</string>
    
    <!-- TOASTS -->
    <string name="toast_req_note">Additional note is required to complete step.</string>
    <string name="toast_req_image">Additional picture is required to complete step.</string>
    <string name="toast_req_both">Additional note and picture is required to complete step.</string>

    <!-- CONTENT DESCRIPTIONS -->
    <string name="logo_desc">Logo</string>
    <string name="btn_yes_desc">Yes Button</string>
    <string name="btn_no_desc">No Button</string>
    <string name="taken_img_desc">Image Taken</string>
    <string name="nav_btn_desc">Nav Button</string>
    <string name="add_note_desc">Add Note Button</string>
    <string name="add_picture_desc">Add Picture Button</string>
    <string name="finished_step_img_desc">Finished Step</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="finished_img">Finished</string>

</resources>
