<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/popwin_bg" >
    
    <TextView
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="6dp"
    	android:gravity="center"
    	android:textStyle="bold"
    	android:textSize="20sp"
    	android:text="@string/add_picture" />
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	android:padding="14dp"
    	android:background="#fff" >
        
        <ImageView 
	        android:id="@+id/extra_image"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center"
	        android:scaleType="fitXY"
	        android:contentDescription="@string/taken_img_desc" />
        
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_take_picture_extra"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_white_glossy"
        android:text="@string/btn_take_picture" />

</LinearLayout>