<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >
	
	<LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:orientation="horizontal" >
	
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="4dp"
			android:textSize="18sp"
			android:text="@string/checklist_label" />
		
		<TextView
			android:id="@+id/checklist_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="18sp" />
	
	</LinearLayout>
        
	<LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:orientation="horizontal" >
	
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="4dp"
			android:textSize="18sp"
			android:textColor="#3366ff"
			android:text="@string/step_label" />
		
		<TextView
			android:id="@+id/step_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:textColor="#3366ff" />
	
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:orientation="horizontal" >
		
	    <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="4dp"
			android:textSize="18sp"
			android:textColor="#29a629"
			android:text="@string/notified_label" />
	    
	    <TextView
	        android:id="@+id/notify_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:textColor="#29a629" />
	    
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/notification_note_container"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:orientation="horizontal"
		android:visibility="gone" >
	
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="4dp"
			android:textSize="18sp"
			android:textColor="#cc0000"
			android:text="@string/notes_label" />
		
		<TextView
			android:id="@+id/notification_note"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:textColor="#cc0000" />
	
	</LinearLayout>
	    
    <ImageView
        android:id="@+id/notification_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:contentDescription="@string/taken_img_desc" />

</LinearLayout>