<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp" >
    
    <TextView
        android:id="@+id/step_order_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="4dp"
        android:textStyle="bold"
        android:textSize="22sp"
		android:text="@string/step_order_label" />
    
	<TextView
        android:id="@+id/step_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/step_order_label"
        android:layout_toRightOf="@id/step_order_label"
        android:textStyle="bold"
        android:textSize="22sp" />
	
	<TextView
        android:id="@+id/step_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step_order_label"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp" />
	
	<!--  
	<TextView
        android:id="@+id/result_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step_name"
        android:layout_marginRight="4dp"
        android:textSize="18sp"
		android:text="@string/result_label" />
	-->
    
	<TextView
	    android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#29a629" />
	
	<ImageView 
        android:id="@+id/result_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step_name"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:contentDescription="@string/taken_img_desc" />
	
	<ImageView
	    android:id="@+id/finished_step_img"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/finished_step_img_desc"
        android:visibility="gone"
        android:src="@drawable/checkmark_icon" />

</RelativeLayout>
